# Genealogy-Graph-Creator

./: README.md
GenealogyGraphCreator/: CMakeLists.txt  main.cpp
